syntax = "proto3";

package com.example.rpc;

// KVStore 服务定义
service KVStoreService {
    rpc Put (PutRequest) returns (PutResponse);
    rpc Get (GetRequest) returns (GetResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}

// 消息定义
message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    bool success = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    bool found = 1;
    string value = 2;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    bool success = 1;
}

// Paxos 相关的消息和服务
service PaxosService {
    rpc Prepare (PrepareRequest) returns (PrepareResponse);
    rpc Accept (AcceptRequest) returns (AcceptResponse);
    rpc Learn (LearnRequest) returns (LearnResponse);
}

message PrepareRequest {
    int64 proposal_number = 1;
}

message PrepareResponse {
    bool promise = 1;
}

message AcceptRequest {
    int64 proposal_number = 1;
    string value = 2;
}

message AcceptResponse {
    bool accepted = 1;
}

message LearnRequest {
    string value = 1;
}

message LearnResponse {
    bool success = 1;
}
